# AJAX_task_v2.0

./: pyproject.toml
framework/: login_page.py  page.py
tests/: conftest.py
tests/login/: conftest.py  test_login.py
tests/login_negative/: conftest.py  test_login_negative.py
utils/: android_utils.py
